k8s/api/api-deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: floodrunner-sandboxrunner
  labels:
    name: floodrunner-sandboxrunner

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      serviceAccountName: api-service-account
      containers:
        - name: api
          image: jellydock/floodrunner-api
          ports:
            - containerPort: 5001
      terminationGracePeriodSeconds: 10
