k8s/api/api-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: api
  ports:
    - port: 80 #port to receive traffic on
      targetPort: 5001 #port that container is listening on
