k8s/api/api-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-route
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`app.floodrunner.dev`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: api-cluster-ip-service
          port: 80
      middlewares:
        - name: api-stripprefix
  tls:
    certResolver: le
    domains:
      - main: floodrunner.dev
        sans:
          - "*.floodrunner.dev"
---
# Strip prefix
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: api-stripprefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /api
      - /api/
